2007-10-08  Don Allingham  <don@gramps-project.org>
	* various: cleanup

2007-10-08  Don Allingham  <don@gramps-project.org>
	* src/gen/lib/note.py: make independent of MarkupText.py

2007-10-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py (__submitter): Remove old usage.
	* src/GrampsDbUtils/_ReadXML.py (stop_research): Remove old usage.
	* src/GrampsCfg.py (get_researcher): Remove old usage.
	* src/gen/db/dbdir.py (__close_metadata): Store tuple;
	(_load_metadata): Load from tuple;
	* src/gen/db/base.py (GrampsDbBase.set_researcher): Move details
	to the Researcher class.
	* src/gen/lib/researcher.py (serialize, unserialize): Add methods; 
	(set_from): Add method;
	(set, get): Remove methods.
	(__init__): Copy from source if provided.

2007-10-08  Don Allingham  <don@gramps-project.org>
	* src/gen/lib/attrbase.py: renamed from attributeBase.py

2007-10-08  Don Allingham  <don@gramps-project.org>
	* various: gen.lib integration. probably touches almost every file

2007-10-07  Don Allingham  <don@gramps-project.org>
	* various: gen.utils integration

2007-10-07  Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/_RelationView.py: init scroll pos on new person, issue #442

2007-10-07  Gary Burton <gary.burton@zen.co.uk>
	* src/PageView.py: sort column retains filter value, issue #507

2007-10-07  Don Allingham  <don@gramps-project.org>
	* src/gen/db/GrampsDbUtils/_Backup.py: use gen.db

2007-10-07  Don Allingham  <don@gramps-project.org>
	* src/gen/db/__init__.py: commit

2007-10-06  Don Allingham  <don@gramps-project.org>
	* various: creation of gen.db package

2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_RelationView.py: don't crash on missing media ref
	* src/DisplayTabs/_GalleryTab.py: on missing media ref, notify to run check tool
	* src/plugins/Check.py: add code to remove missing media ref in person,
	family, event, place, source.
